helm-chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mushop
  namespace: mushop
spec:
  ingressClassName: nginx
  tls:
    - secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge
                port:
                  number: 80
